# descriptor-encrypt

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
crates/descriptor-tree/: Cargo.toml
crates/descriptor-tree/src/: lib.rs
src/: lib.rs  main.rs  payload.rs  template.rs
src/.github/: ci.yaml
src/payload/: cipher.rs  descriptor_node.rs  descriptor_tree.rs  encrypt.rs  shamir.rs
src/template/: decode.rs  dummy.rs  encode.rs  tag.rs  varint.rs
