[package]
name = "descriptor-encrypt"
version = "0.1.0"
edition = "2024"
authors = ["Joshua Doman <joshsdoman@gmail.com>"]
license = "CC0-1.0"
readme = "README.md"

[features]
default = ["std"]
std = ["bitcoin/std"]
compiler = []
trace = []

[dependencies]
anyhow = "1.0.98"
bitcoin = "0.32.5"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
miniscript = "12.3.2"
sha2 = "0.10.9"
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
itertools = "0.14.0"

[dev-dependencies]
rand = "0.9.1"
