[package]
name = "descriptor-encrypt"
version = "0.1.1"
authors = ["Joshua Doman <joshsdoman@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/joshdoman/descriptor-encrypt"
repository = "https://github.com/joshdoman/descriptor-encrypt"
description = "Encrypt any Bitcoin wallet descriptor with a matching access control policy"
keywords = [ "crypto", "bitcoin", "descriptor", "miniscript", "encrypt" ]
readme = "README.md"
edition = "2024"
rust-version = "1.85.0"

[features]
default = ["std"]
std = ["bitcoin/std"]
compiler = []
trace = []

[dependencies]
anyhow = "1.0.98"
bitcoin = "0.32.5"
chacha20 = "0.9.1"
chacha20poly1305 = "0.10.1"
miniscript = "12.3.2"
sha2 = "0.10.9"
clap = { version = "4.4", features = ["derive"] }
itertools = "0.14.0"
hex = "0.4.3"

[dev-dependencies]
rand = "0.9.1"
