[package]
name = "descriptor-tree"
version = "0.1.0"
description = "Library for constructing a prunable tree of keys and keyless conditions from a descriptor"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitcoin.workspace = true
miniscript.workspace = true